Fixed button and spacing in restaurant list

--- a/css/styles.css
+++ b/css/styles.css
@@ -161,9 +161,9 @@ nav h1 a {
   text-align: left;
   
   max-width: 470px;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;  
+  width: 80%;
+ // display: flex;
+  //flex-wrap: wrap;  
 }
 #restaurants-list .restaurant-img {
   background-color: #ffffff;
@@ -208,8 +208,8 @@ nav h1 a {
   text-transform: uppercase;
   display: block;
   flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  //height: 50%;
 }
 
 /* ====================== Restaurant Details ====================== */
